kube/gcp/pdf/pdf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdf-service
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: pdf
spec:
  selector:
    app.kubernetes.io/name: pdf
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
