kube/gcp/pdf/pdf-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdf-ingress
  namespace: chunkmydocs
  labels:
    app: pdf
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  ingressClassName: gce
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pdf-service
            port:
              number: 8000
